# nextjlc

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh  chore.toml  clay-config.json  clay.toml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
examples/: add_header.rs  dcode_processing.rs  file_type_match.rs  fingerprint_processing.rs  match_outline.rs  rename_files.rs  validation_check.rs
pkg/: README.md  nextjlc.d.ts  nextjlc.js  nextjlc_bg.wasm  nextjlc_bg.wasm.d.ts  package.json
public/: site.webmanifest
src/: App.tsx  client.tsx  dcode.rs  drill.rs  editfile.ts  file_type.rs  filetype.ts  fingerprint.rs  footer.tsx  header-badge.tsx  header.rs  lib.rs  main.tsx  outline.rs  progress-bar.tsx  rename.rs  style.css  upload.tsx  validation.rs  vite-env.d.ts  workflow.tsx
web/: client.tsx  editfile.ts  filetype.ts  footer.tsx  header-badge.tsx  main.tsx  progress-bar.tsx  style.css  upload.tsx  vite-env.d.ts  workflow.tsx
