[package]
name = "nextjlc-core"
version = "0.2.13"
edition = "2024"
description = "A powerful library to convert and streamline Gerber file preparation for JLC."
license-file = "LICENSE"
repository = "https://github.com/nextjlc/core"
authors = ["Canmi <t@canmi.icu>", "HalfSweet <halfsweet@halfsweet.cn>", "Acha <acha@acha666.cn>"]
keywords = ["fuckjlc", "transjlc", "openjlc", "nextjlc"]
categories = ["data-structures", "encoding"]

[lib]
name = "nextjlc"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "getrandom"]

[dependencies]
rand = "0.9"
chrono = "0.4"
md-5 = "0.10"
regex = "1"
fancy-regex = "0.16"
once_cell = "1"
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }